fix: sort out iOS image flickering issue

--- a/components/ActivityCard/ActivityCard.module.css
+++ b/components/ActivityCard/ActivityCard.module.css
@@ -1,5 +1,5 @@
 .wrapper {
-  background-image: var(--background-image);
+  /* background-image: var(--background-image); */
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
